deployment/base/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: trichter
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/part-of: trichter
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
        app.kubernetes.io/part-of: trichter
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: app
          image: ghcr.io/tt-trichter/app:main
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
      restartPolicy: Always
