deployment/base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: trichter
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/part-of: trichter
spec:
  selector:
    app.kubernetes.io/name: app
  ports:
    - port: 3000
      targetPort: 3000
