deployment/base/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app
  namespace: trichter
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`trichter.hauptspeicher.com`)
      kind: Rule
      services:
        - name: app
          port: 3000
  tls:
    certResolver: myresolver
